src/test/resources/acceptance/accept/validFloatConstants.ul
boolean bar ()
{
    10.54;
    1.1;
    0.0;
    121212121221.454544544554;
}
