src/test/resources/reject/invalidSpacedIntConstant.ul
boolean bar ()
{
    10 10;
}
